# eval-trace-viewer

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml  schema.sql
backend/: Dockerfile  config.py  database.py  main.py  models.py
backend/api/: evals.py  feedback.py  samples.py
backend/scripts/: ingest_results.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: MessageRenderer.tsx
frontend/src/pages/: ComparisonView.tsx  EvalsList.tsx  QuestionDetailPage.tsx  QuestionsPage.tsx  SamplesList.tsx  TraceView.tsx
frontend/src/types/: index.ts
scripts/: start-backend.sh  start-frontend.sh
